--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="primaryColor">#f8f8f8</color>
-    <color name="primaryLightColor">#ffffff</color>
-    <color name="primaryDarkColor">#c5c5c5</color>
-    <color name="primaryTextColor">#000000</color>
+    <color name="primaryColor">#1976d2</color>
+    <color name="primaryLightColor">#63a4ff</color>
+    <color name="primaryDarkColor">#004ba0</color>
+    <color name="primaryTextColor">#ffffff</color>
 </resources>
