--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -52,5 +52,16 @@
             app:layout_constraintEnd_toEndOf="@+id/forecast_recyclerview"
             app:layout_constraintStart_toStartOf="@+id/forecast_recyclerview"
             app:layout_constraintTop_toTopOf="@+id/forecast_recyclerview" />
+
+        <TextView
+            android:id="@+id/empty_list_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_forecast_info"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/forecast_recyclerview"
+            app:layout_constraintEnd_toEndOf="@+id/forecast_recyclerview"
+            app:layout_constraintStart_toStartOf="@+id/forecast_recyclerview"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
