--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="android:layout_marginEnd">3dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_gravity">center</item>
-        <item name="tint">#000</item>
+        <item name="tint">#FFFFFF</item>
     </style>
 
 </resources>
