Setup refresh layout for forcast fragment

--- a/app/src/main/res/layout-night/weather_item.xml
+++ b/app/src/main/res/layout-night/weather_item.xml
@@ -107,11 +107,12 @@
                     android:layout_marginTop="25dp"
                     android:orientation="horizontal"
                     android:weightSum="6">
+
                     <ImageView
                         android:id="@+id/imageView12"
                         style="@style/weather_item_icons"
-                        app:srcCompat="@drawable/ic_humidity"
-                        android:tint="@color/primaryLightColor"/>
+                        android:tint="#FFFFFF"
+                        app:srcCompat="@drawable/ic_humidity" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -125,8 +126,8 @@
                     <ImageView
                         android:id="@+id/imageView11"
                         style="@style/weather_item_icons"
-                        app:srcCompat="@drawable/ic_pressure"
-                        android:tint="@color/primaryLightColor"/>
+                        android:tint="#FFFFFF"
+                        app:srcCompat="@drawable/ic_pressure" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -140,9 +141,9 @@
 
                     <ImageView
                         android:id="@+id/imageView10"
-                        app:srcCompat="@drawable/ic_wind"
                         style="@style/weather_item_icons"
-                        android:tint="@color/primaryLightColor"/>
+                        android:tint="#FFFFFF"
+                        app:srcCompat="@drawable/ic_wind" />
 
                     <TextView
                         android:layout_width="wrap_content"
