Set app launcher theme

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
+    <style name="SplashScreenTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowBackground">@drawable/instant_weather_ic</item>
+    </style>
+
 </resources>
